--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "buildProd": "webpack --progress --mode production",
     "devServer": "webpack-dev-server --mode development",
     "watchBuildDev": "webpack --watch --progress --mode development",
-    "start": ""
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -29,16 +29,17 @@
     "babel-preset-react": "6.24.1",
     "copy-webpack-plugin": "4.5.1",
     "html-webpack-plugin": "3.2.0",
-    "webpack-dev-server": "3.1.1",
+    "webpack": "4.1.0",
     "webpack-cli": "2.0.4",
-    "webpack": "4.1.0"
+    "webpack-dev-server": "3.1.1"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-polyfill": "6.26.0",
+    "gh-pages": "^2.1.1",
     "immutable": "4.0.0-rc.9",
     "react": "16.0.0",
     "react-dom": "16.0.0",
-    "react-slick": "0.23.1",
-    "babel-plugin-transform-object-rest-spread" : "6.26.0"
+    "react-slick": "0.23.1"
   }
 }
